tests/baselines/reference/nameCollisionWithBlockScopedVariable1.errors.txt
nameCollisionWithBlockScopedVariable1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
nameCollisionWithBlockScopedVariable1.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== nameCollisionWithBlockScopedVariable1.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class C { }
    }
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        {
            let M = 0;
            new C();
        }
    }